...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:backgroundTint="@color/gray"
    android:id="@+id/coordinatorLayout_profile"
    tools:context=".ProfileActivity"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/userText"
        android:layout_width="wrap_content"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.985" />

    <TextView
        android:id="@+id/tv_sign_out"
        style="@style/viewCustom"
        android:layout_width="78dp"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
...
